fix: heading spacing

--- a/src/styles/article.module.css
+++ b/src/styles/article.module.css
@@ -9,7 +9,7 @@
   h6 {
     @apply font-medium leading-none;
     @apply tracking-tight no-underline;
-    @apply pt-6;
+    @apply py-4;
   }
 
   em > strong,
